8329797: Shenandoah: Default case invoked for: "MaxL" (bad AD file)